attached_assets/Pasted--workspace-pytest-cov-src-cov-report-term-missing-test-se-1757323096297_1757323096299.txt
~/workspace$ pytest --cov=src --cov-report=term-missing
=================================== test session starts ====================================
platform linux -- Python 3.11.13, pytest-8.4.2, pluggy-1.6.0
rootdir: /home/runner/workspace
configfile: pyproject.toml
plugins: cov-6.2.1, mock-3.15.0
collected 2073 items / 2 errors                                                            

========================================== ERRORS ==========================================
______________ ERROR collecting tests/test_17_real_business_logic_coverage.py ______________
tests/test_17_real_business_logic_coverage.py:23: in <module>
    from src.storage.services.vacancy_storage_service import VacancyStorageService, AbstractVacancyStorageService
src/storage/services/__init__.py:9: in <module>
    from .vacancy_storage_service import VacancyStorageService
src/storage/services/vacancy_storage_service.py:56: in <module>
    class VacancyStorageService(AbstractVacancyStorageService):
src/storage/services/vacancy_storage_service.py:607: in VacancyStorageService
    def get_companies_and_vacancies_count(self) -> List[Tuple[Any, ...]]:
                                                        ^^^^^
E   NameError: name 'Tuple' is not defined
________________ ERROR collecting tests/test_sql_filter_service_coverage.py ________________
tests/test_sql_filter_service_coverage.py:22: in <module>
    from src.storage.services.sql_filter_service import SQLFilterService
src/storage/services/__init__.py:9: in <module>
    from .vacancy_storage_service import VacancyStorageService
src/storage/services/vacancy_storage_service.py:56: in <module>
    class VacancyStorageService(AbstractVacancyStorageService):
src/storage/services/vacancy_storage_service.py:607: in VacancyStorageService
    def get_companies_and_vacancies_count(self) -> List[Tuple[Any, ...]]:
                                                        ^^^^^
E   NameError: name 'Tuple' is not defined
================================= short test summary info ==================================
ERROR tests/test_17_real_business_logic_coverage.py - NameError: name 'Tuple' is not defined
ERROR tests/test_sql_filter_service_coverage.py - NameError: name 'Tuple' is not defined
!!!!!!!!!!!!!!!!!!!!!!!!! Interrupted: 2 errors during collection !!!!!!!!!!!!!!!!!!!!!!!!!!
==================================== 2 errors in 2.51s =====================================
~/workspace$ mypy src/ | grep incompatible
src/api_modules/unified_api.py:63: error: Argument 2 to "get_vacancies" of "HeadHunterAPI" has incompatible type "**dict[str, dict[str, Any]]"; expected "int"  [arg-type]
src/api_modules/unified_api.py:373: error: Argument "sources" to "get_vacancies_from_sources" of "UnifiedAPI" has incompatible type "dict[str, Any] | None"; expected "list[str]"  [arg-type]